Ajout USer/Article

--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,5 +1,12 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
-fos_rest: ~
+fos_rest:
+    view:
+        view_response_listener: force
+    routing_loader:
+        default_format: json
+    body_converter:
+        enabled: true
+    param_fetcher_listener: true
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
 #    routing_loader: true
