--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,13 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+users:
+    type: rest
+    resource: App\Controller\UsersController
+    prefix: /api
+
+app.swager_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui}
