--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "nelmio/api-doc-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
@@ -20,6 +22,8 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.3",
+        "hautelook/alice-bundle": "^2.0",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.6",
         "symfony/profiler-pack": "^1.0"
