--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,7 @@ APP_ENV=dev
 APP_SECRET=fb8a74023c438126d1c69eea85097316
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
+SYMFONY_DEPRECATIONS_HELPER=disabled
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
