Ajout controller et entité

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,7 @@ security:
     providers:
         your_db_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Master
                 property: apiKey
     firewalls:
         dev:
