--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,7 +4,7 @@
 
 users:
     type: rest
-    resource: App\Controller\UsersController
+    resource: App\Controller\MastersController
     prefix: /api
 
 app.swager_ui:
